# MNIST-research

./: .gitignore  MANUAL.md  OverlapMNIST_revised_plan.md  README.md  plan.md  pyproject.toml
base-single/: README.md
base-single/configs/: cnn.yaml
base-single/cpp/: CMakeLists.txt
base-single/data/: README.md
base-single/python/: benchmark_onnx.py  export_onnx.py  train.py  visualize.py
base-single/scripts/: run_benchmark.sh  run_visualize.sh
configs/: mnist_overlap.yaml
cpp/: CMakeLists.txt
cpp/include/: onnx_infer.hpp
cpp/src/: main.cpp  onnx_infer.cpp
denoising-multitask/: .gitignore  README.md  main.py  requirements.txt  strip_checkpoint_optimizer.py
denoising-multitask/src/: dataset.py  experiment.py  model.py  plot.py
overlap-attention/: MANUAL.md  README.md  pyproject.toml
overlap-attention/configs/: mnist_overlap.yaml
overlap-attention/data/: README.md
overlap-attention/results/: README.md  summary.md
overlap-attention/scripts/: make_figures.py  run_lenet.py
overlap-multitask/: .gitignore  README.md  main.py  plan.md  requirements.txt
overlap-multitask/configs/: mnist_multitask.yaml  mnist_overlap.yaml
overlap-multitask/mnist_overlap/: __init__.py  config.py  data.py  main.py  manifest.py  metrics.py  mnist_classifier.py  model.py  runtime.py  training_plot.py
overlap-multitask/tests/: test_multitask.py
python/: benchmark_onnx.py  benchmark_pytorch.py  visualize.py
python/mnist_core/: bench.py  config.py  metrics.py
results/: README.md  summary.md
results/tables/: benchmark_summary.csv  bootstrap_intervals.csv  training_stability.csv
scripts/: run_all.sh  run_benchmark.sh  run_experiment.sh  run_export.sh  run_figures.sh  run_train.sh  run_visualize.sh
sequence-recognition/: requirements.txt
sequence-recognition/static-sequence/: README.md
sequence-recognition/static-sequence/cpp/: CMakeLists.txt
sequence-recognition/static-sequence/cpp/include/static_sequence/: csv_logger.hpp
sequence-recognition/static-sequence/cpp/src/: csv_logger.cpp  main.cpp
src/mnist_overlap/: __init__.py  __main__.py  analysis.py  cli.py  configuration.py  inference.py  metrics.py  pipeline.py
static-sequence/python/: benchmark_pytorch.py  verify_fidelity.py
static-sequence/scripts/: run_benchmark.sh  run_export.sh
static-sequence/tests/: test_dataset_codec.py
(+78 files in other folders)
